src/Styles/RoutineDisplay/Components/RoutineMap.css
.RoutineMap {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
}

.RoutineMap .mapView {
    height: 50%;
    width: 100%;
    display: flex;
}

.RoutineMap .mapView .noSelectionWarning{
    height: 100%;
    width: 35%;
    color: gray;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: small;
    font-style: italic;

}

.RoutineMap .mapView .map {
    width: 60%;
    height: 100%;
    max-height: 200px;
    overflow: scroll;
}

.RoutineMap .mapView .stats {
    width: 35%;
    height: 100%;
    max-height: 200px;
    overflow: scroll;
    display: flex;
    flex-direction: column;
}

.RoutineMap .info {
    height: calc(40% - 20px);
    width: calc(100% - 20px);
    margin: 10px;
    background-color: rgb(0, 160, 198);
    border-radius: 15px 0 15px 0;

}

.RoutineMap .mapView .stats .statisticTitle {
    height: 50%;
    width: 100%;
}

.RoutineMap .info .subRTitle {
    height: 15%;
    width: calc(100% - 20px);
    margin: 10px;
    color: white;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    font-size: medium;
    font-weight: bold;
}

.RoutineMap .info .subRDescription {
    height: 30%;
    margin-top: 0px;
    margin: 10px;
    width: calc(100% - 20px);
    color: white;
    align-items: flex-start;
    text-align: right;
    font-size: small;
}

.RoutineMap .info .highlights {
    height: 25%;
    margin: 10px;
    width: calc(100% - 20px);
    /* background-color: black; */
    border-radius: 10px 0 10px 0;
    display: flex;
    align-items: center;
}

.RoutineMap .info .highlights .route {
    width: calc(50% - 10px);
    height: calc(100% - 10px);
    margin: 5px;
    border-radius: 10px 0 0 0;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: small;
    font-weight: bold;
}

.RoutineMap .info .highlights .route p{
    max-width: 90%;
    overflow: scroll;
}


.RoutineMap .info .highlights .route p::-webkit-scrollbar {
    height: 0px;
}

.RoutineMap .info .highlights .type {
    width: calc(50% - 10px);
    height: calc(100% - 10px);
    margin: 5px;
    border-radius: 0px 0 10px 0;
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: small;
    font-weight: bold;
}

.RoutineMap .info .highlights .type p{
    max-width: 90%;
    overflow: scroll;
}


.RoutineMap .info .highlights .type p::-webkit-scrollbar {
    height: 0px;
}

.RoutineMap .noSelectionWarningInfo {
    height: calc(40% - 20px);
    width: calc(100% - 20px);
    margin: 10px;
    align-items: center;
    justify-content: center;
    display: flex;
    color: gray;
    font-size: small;
    font-style: italic;
}

